modify blog title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:        Chen's blog
+title:        Chen's Blog
 tagline:      Keep coding and carry on!
 baseurl:      ""
 paginate:     10
