--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,12 @@ gems:
   - jekyll-paginate
 
 #Others
+highlighter: pygments
 markdown: redcarpet
+redcarpet:
+  extensions: 
+    - fenced_code_blocks
+    - no_intra_emphasis
+    - strikethrough
+    - autolink
+    - tables
